--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "zhongart.com 为2019韩玉臣佛罗伦萨Palazzo Medici 个展拓展的360导览页面",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build_dev": "webpack   --config ./webpack.development.config.js",
+    "build_pro": "webpack   --config ./webpack.production.config.js" ,
+    "dev": "webpack-dev-server --open --config ./webpack.development.config.js",
     "pushdev": "git add . && git commit -m   \"$npm_package_config_commitmessage\"  && git push origin master"
   },
   "repository": {
@@ -18,10 +20,22 @@
   },
   "homepage": "https://github.com/carllx/hyuch360#readme",
   "config": {
-    "commitmessage": "2nd update"
+    "commitmessage": "swith to webpack"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "aframe": "^0.9.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
+    "npm-install-webpack-plugin": "^4.0.5",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
