--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build_dev": "webpack   --config ./webpack.development.config.js ",
     "build_pro": "webpack   --config ./webpack.production.config.js ",
     "dev": "webpack-dev-server --open --config ./webpack.development.config.js",
-    "pushdev": "git add . && git commit -m   \"$npm_package_config_commitmessage\"  && git push origin master"
+    "pushdev": "git add . && git commit -m   \"$npm_package_config_commitmessage\"  && git push origin master",
+    "rebuild_opr":"node ./src/static/_repackage_opere.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
   },
   "homepage": "https://github.com/carllx/hyuch360#readme",
   "config": {
-    "commitmessage": "basic 360 guida"
+    "commitmessage": "prof update , bug remain with prof_packking"
   },
   "dependencies": {
     "aframe": "^0.9.2"
