--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/carllx/hyuch360#readme",
   "config": {
-    "commitmessage": "prof update , bug remain with prof_packking"
+    "commitmessage": "vaio connect test "
   },
   "dependencies": {
     "aframe": "^0.9.2"
