--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build_dev": "webpack   --config ./webpack.development.config.js ",
     "build_pro": "webpack   --config ./webpack.production.config.js ",
     "dev": "webpack-dev-server --open --config ./webpack.development.config.js",
-    "pushdev": "chrome‘ && git commit -m   \"$npm_package_config_commitmessage\"  && git push origin master",
+    "pushdev": "git add . && git commit -m   \"$npm_package_config_commitmessage\"  && git push origin master",
     "rebuild_opr": "node ./src/static/_repackage_opere.js"
   },
   "repository": {
@@ -21,22 +21,22 @@
   },
   "homepage": "https://github.com/carllx/hyuch360#readme",
   "config": {
-    "commitmessage": "vaio connect test "
+    "commitmessage": "add sphere for wallper , but not look good"
   },
   "dependencies": {
     "aframe": "^0.9.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "npm-install-webpack-plugin": "^4.0.5",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
