--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/carllx/hyuch360#readme",
   "config": {
-    "commitmessage": "add sphere for wallper , but not look good"
+    "commitmessage": "upgrade afrme to 1.0.4"
   },
   "dependencies": {
-    "aframe": "^0.9.2"
+    "aframe": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
